Updated the img src for an online one

--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ hr {
 }
 
 .weather-app {
-  background-image: url("C:/SheCodes/Vanilla Weather App/media/camping.jpg");
+  background-image: url("https://www.thurrott.com/wp-content/uploads/sites/2/2015/08/win10sr1.jpg");
   border: 1px solid #8db1d3;
   border-radius: 5px;
   padding: 20px;
